test/files/neg/t10081.check
t10081.scala:2: error: value x is not a member of B[X]
trait B[X] extends A[B[X @unchecked]] { this.x }
                                             ^
1 error
